@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-05-31 DP  1.8.0  Retain column widths when refreshing the edit grid, per
+                      Ferenc Lutischan.
 2007-05-30 DP  1.8.0  Ensure logfiles and pgpass files can be correctly saved
                       on Windows when the username contains non-ASCII chars.
                       Per report from Athanasios E. Samaras.
